# CrystallineLattice

./: DESIGN.md  README.md  main.c  meson.build  run-phase0.sh
include/: common.h  control.h  diagnostics.h  input.h  log.h  phases.h  platform.h  protocol.h  seat.h  server.h  shell.h  transport.h  wayland.h  window.h  wm.h
src/: client.c  common.c  control.c  diag_enumerate.c  diag_firstlight.c  diag_gl.c  diag_hotplug.c  diag_pageflip.c  diag_seat.c  input.c  log.c  p0_1_enum.c  p0_2_firstlight.c  p0_3_flip.c  p0_4_gl.c  p0_5_seatd.c  p0_6_hotplug.c  platform.c  protocol.c  seat.c  server.c  shell.c  transport.c  wayland.c  window.c  wm.c
tests/: transport_selftest.c  wayland_selftest.c  wm_selftest.c
